examples/test/testpolicy16152.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16152
  namespace: namespace470
spec:
  podSelector:
    matchLabels:
      key13: value22
      key38: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value23
          key2: value16
          key45: value16
      podSelector:
        matchLabels:
          key38: value19
